--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@ $primary: #549670;
 $secondary: #f15d2e;
 $danger: #df1600;
 $white: #fff;
+
 @import '../node_modules/bootstrap/scss/bootstrap';
 @import '../node_modules/bootstrap-icons/font/bootstrap-icons.min.css';
 .App {
@@ -12,4 +13,23 @@ $white: #fff;
   scale: 1.3
 }
 
+.hero-image-skin {
+  background-image: url('./images/skincare.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 600px;
+}
+.hero-image-hair {
+  background-image: url('./images/shampoo.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 600px;
+}
 
+body, html {
+  font-family: 'Roboto Condensed'
+}
+
+.nav-link.active {
+  color: $secondary !important;
+}
